tweak and re-render

--- a/index.Rmd
+++ b/index.Rmd
@@ -49,8 +49,8 @@ Everything from here onwards is *very much* a work in progress!
 
 - [Prelude to data](./prelude-to-data.html)
 - [Data types](./data-types.html)
-- [Describing data](./describing-data.html) <span style="color:#cccccc">(to be updated)</span><!-- skimr, group_by, summarise -->
-- [Visualising data](./visualising-data.html)  <span style="color:#cccccc">(to be updated)</span><!-- add ggplot -->
+- [Describing data](./describing-data.html)
+- [Visualising data](./visualising-data.html)
 - <span style="color:#cccccc">Data manipulation (to be added)</span> <!-- gather/spread, etc -->
 - <span style="color:#cccccc">Working with text (to be added)</span>  <!-- stringr -->
 - <span style="color:#cccccc">Additional tricks (to be added)</span>  <!-- dates -->
