--- a/index.Rmd
+++ b/index.Rmd
@@ -51,7 +51,7 @@ Everything from here onwards is *very much* a work in progress!
 - [Data types](./data-types.html)
 - [Describing data](./describing-data.html)
 - [Visualising data](./visualising-data.html)
-- <span style="color:#cccccc">Data manipulation (to be added)</span> <!-- gather/spread, etc -->
+- [Manipulating data](./manipulating-data.html) <span style="color:#cccccc">(to be updated)</span>
 - <span style="color:#cccccc">Working with text (to be added)</span>  <!-- stringr -->
 - <span style="color:#cccccc">Additional tricks (to be added)</span>  <!-- dates -->
 
