--- a/index.Rmd
+++ b/index.Rmd
@@ -52,8 +52,8 @@ Everything from here onwards is *very much* a work in progress!
 - [Describing data](./describing-data.html)
 - [Visualising data](./visualising-data.html)
 - [Manipulating data](./manipulating-data.html) <span style="color:#cccccc">(to be updated)</span>
-- <span style="color:#cccccc">Working with text (to be added)</span>  <!-- stringr -->
-- <span style="color:#cccccc">Additional tricks (to be added)</span>  <!-- dates -->
+- <span style="color:#cccccc">Working with text (to be added)</span>  <!-- stringr (link to tidytext) -->
+- <span style="color:#cccccc">Import and export (to be added)</span>  <!-- data formats -->
 
 ## Part 3: Statistical inference
 
